cabal-version: 3.0

name:                   cardano-testnet
version:                10.1.0
synopsis:               The cardano full node
description:            The cardano full node.
copyright:              2021-2023 Input Output Global Inc (IOG), 2023-2026 Intersect.
author:                 IOHK
maintainer:             operations@iohk.io
category:               Cardano,
                        Test,
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-doc-files:        CHANGELOG.md

common project-config
  default-language:     Haskell2010
  build-depends:        base >= 4.14 && < 5

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

common maybe-unix
  if !os(windows)
    build-depends:      unix

library
  import:               maybe-unix
                      , project-config

  build-depends:        aeson
                      , aeson-pretty
                      , annotated-exception
                      , ansi-terminal
                      , bytestring
                      , cardano-api ^>= 10.24
                      , cardano-cli:{cardano-cli, cardano-cli-test-lib} ^>= 10.15
                      , cardano-crypto-class ^>=2.2.3.2
                      , cardano-crypto-wrapper
                      , cardano-git-rev ^>= 0.2.2
                      , cardano-ledger-alonzo
                      , cardano-ledger-binary
                      , cardano-ledger-byron
                      , cardano-ledger-conway
                      , cardano-ledger-core
                      , cardano-ledger-api
                      , cardano-ledger-conway
                      , cardano-ledger-core:{cardano-ledger-core, testlib}
                      , cardano-ledger-dijkstra
                      , cardano-ledger-shelley
                      , cardano-node
                      , cardano-ping ^>= 0.9
                      , cardano-prelude
                      , cardano-rpc
                      , contra-tracer
                      , containers
                      , data-default-class
                      , cborg
                      , containers
                      , contra-tracer
                      , data-default-class
                      , Diff
                      , directory
                      , exceptions
                      , extra
                      , filepath
                      , hedgehog
                      , hedgehog-extras ^>= 0.10
                      , http-conduit
                      , io-classes:{si-timers}
                      , iproute
                      , lens-aeson
                      , microlens
                      , monad-control
                      , mono-traversable
                      , mtl
                      , network
                      , network-mux
                      , optparse-applicative-fork
                      , ouroboros-network ^>= 0.22.6
                      , ouroboros-network-api
                      , prettyprinter
                      , process
                      , resourcet
                      , retry
                      , rio
                      , rio-orphans
                      , safe-exceptions
                      , scientific
                      , stm
                      , tasty ^>= 1.5
                      , tasty-expected-failure
                      , tasty-hedgehog
                      , template-haskell
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , tx-generator
                      , unliftio
                      , yaml

  hs-source-dirs:       src
  exposed-modules:      Cardano.Testnet
                        Parsers.Run
                        Testnet.Blockfrost
                        Testnet.Components.Configuration
                        Testnet.Components.Query
                        Testnet.Defaults
                        Testnet.EpochStateProcessing
                        Testnet.Filepath
                        Testnet.Handlers
                        Testnet.Orphans
                        Testnet.Ping
                        Testnet.Process.Cli.DRep
                        Testnet.Process.Cli.Keys
                        Testnet.Process.Cli.SPO
                        Testnet.Process.Cli.Transaction
                        Testnet.Process.RunIO
                        Testnet.Process.Run
                        Testnet.Property.Assert
                        Testnet.Property.Run
                        Testnet.Property.Util
                        Testnet.Runtime
                        Testnet.Start.Byron
                        Testnet.Start.Cardano
                        Testnet.Start.Types
                        Testnet.SubmitApi
                        Testnet.TestQueryCmds
                        Testnet.TxGenRuntime
                        Testnet.Types

  other-modules:        Parsers.Cardano
                        Parsers.Help
                        Parsers.Version
                        Testnet.TestEnumGenerator
                        Paths_cardano_testnet

  autogen-modules:      Paths_cardano_testnet



executable cardano-testnet
  import:               project-config

  hs-source-dirs:       app

  main-is:              cardano-testnet.hs

  build-depends:        cardano-crypto-class ^>=2.2.3.2
                      , cardano-cli
                      , cardano-testnet
                      , optparse-applicative-fork

  ghc-options:          -threaded -rtsopts "-with-rtsopts=-N -T"

test-suite cardano-testnet-golden
  import:               project-config

  hs-source-dirs:       test/cardano-testnet-golden

  main-is:              cardano-testnet-golden.hs

  other-modules:        Cardano.Testnet.Test.Golden.Config
                        Cardano.Testnet.Test.Golden.Help
                        Cardano.Testnet.Test.Golden.Util

  type:                 exitcode-stdio-1.0

  build-depends:        aeson
                      , aeson-pretty
                      , bytestring
                      , cardano-api
                      , cardano-crypto-class
                      , cardano-testnet
                      , exceptions
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , process
                      , regex-compat
                      , tasty ^>= 1.5
                      , tasty-hedgehog
                      , text

  ghc-options:          -threaded -rtsopts "-with-rtsopts=-N -T"

  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-submit-api:cardano-submit-api
                      , cardano-testnet:cardano-testnet

test-suite cardano-testnet-test
  import:               project-config

  hs-source-dirs:       test/cardano-testnet-test

  main-is:              cardano-testnet-test.hs

  other-modules:        Cardano.Testnet.Test.Api.TxReferenceInputDatum
                        Cardano.Testnet.Test.Cli.Conway.StakeSnapshot
                        Cardano.Testnet.Test.Cli.KesPeriodInfo
                        Cardano.Testnet.Test.Cli.LeadershipSchedule
                        Cardano.Testnet.Test.Cli.Query
                        Cardano.Testnet.Test.Cli.QuerySlotNumber
                        Cardano.Testnet.Test.Cli.Plutus.Scripts
                        Cardano.Testnet.Test.Cli.Plutus.CostCalculation
                        Cardano.Testnet.Test.Cli.Plutus.MultiAssetReturnCollateral
                        Cardano.Testnet.Test.Cli.Scripts.Simple.CostCalculation
                        Cardano.Testnet.Test.Cli.Scripts.Simple.Mint
                        Cardano.Testnet.Test.Cli.StakeSnapshot
                        Cardano.Testnet.Test.Cli.Transaction
                        Cardano.Testnet.Test.Cli.Transaction.BuildEstimate
                        Cardano.Testnet.Test.Cli.Transaction.RegisterDeregisterStakeAddress
                        Cardano.Testnet.Test.DumpConfig
                        Cardano.Testnet.Test.FoldEpochState
                        Cardano.Testnet.Test.Gov.CommitteeAddNew
                        Cardano.Testnet.Test.Gov.DRepActivity
                        Cardano.Testnet.Test.Gov.DRepDeposit
                        Cardano.Testnet.Test.Gov.DRepRetirement
                        Cardano.Testnet.Test.Gov.GovActionTimeout
                        Cardano.Testnet.Test.Gov.InfoAction
                        Cardano.Testnet.Test.Gov.NoConfidence
                        Cardano.Testnet.Test.Gov.PParamChangeFailsSPO
                        Cardano.Testnet.Test.Gov.PredefinedAbstainDRep
                        Cardano.Testnet.Test.Gov.ProposeNewConstitution
                        Cardano.Testnet.Test.Gov.ProposeNewConstitutionSPO
                        Cardano.Testnet.Test.Gov.Transaction.HashMismatch
                        Cardano.Testnet.Test.Gov.TreasuryDonation
                        Cardano.Testnet.Test.Gov.TreasuryGrowth
                        Cardano.Testnet.Test.Gov.TreasuryWithdrawal
                        Cardano.Testnet.Test.Rpc.Query
                        Cardano.Testnet.Test.Rpc.Transaction
                        Cardano.Testnet.Test.Misc
                        Cardano.Testnet.Test.Node.Shutdown
                        Cardano.Testnet.Test.MainnetParams
                        Cardano.Testnet.Test.SanityCheck
                        Cardano.Testnet.Test.RunTestnet
                        Cardano.Testnet.Test.SubmitApi.Transaction
                        Cardano.Testnet.Test.UpdateTimeStamps
                        Cardano.Testnet.Test.Utils

  type:                 exitcode-stdio-1.0

  build-depends:        aeson
                      , aeson-pretty
                      , async
                      , base16-bytestring
                      , bytestring
                      , cardano-api
                      , cardano-cli:{cardano-cli, cardano-cli-test-lib}
                      , cardano-ledger-api
                      , cardano-crypto-class
                      , cardano-ledger-binary
                      , cardano-ledger-conway
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-node
                      , cardano-prelude
                      , cardano-rpc
                      , cardano-slotting
                      , cardano-strict-containers ^>= 0.1
                      , cardano-testnet
                      , containers
                      , data-default-class
                      , directory
                      , exceptions
                      , filepath
                      , hedgehog
                      , hedgehog-extras
                      , http-conduit
                      , iproute
                      , lens
                      , lens-aeson
                      , microlens
                      , monad-control
                      , mtl
                      , process
                      , resourcet
                      , regex-compat
                      , rio
                      , tasty ^>= 1.5
                      , text
                      , time
                      , transformers
                      , vector

  ghc-options:          -threaded -rtsopts "-with-rtsopts=-N -T"

  build-tool-depends:   cardano-node:cardano-node
                      , cardano-cli:cardano-cli
                      , cardano-submit-api:cardano-submit-api
                      , cardano-testnet:cardano-testnet
