cabal-version: 3.0

name:                   cardano-tracer
version:                0.3.2
synopsis:               A service for logging and monitoring over Cardano nodes
description:            A service for logging and monitoring over Cardano nodes.
category:               Cardano,
                        Trace,
copyright:              2022-2023 Input Output Global Inc (IOG), 2023-2025 Intersect.
author:                 IOHK
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
build-type:             Simple
extra-doc-files:        README.md
                        CHANGELOG.md

flag rtview
  description:          Enable RTView. False by default. Enable with `-f +rtview`.
  default:              False
  manual:               True

flag systemd
  description:          Enable systemd support.
  default:              True
  manual:               True

common project-config
  default-language:     Haskell2010
  build-depends:        base >= 4.14 && < 5

  default-extensions:   BlockArguments
                      , CPP
                      , DerivingStrategies
                      , GeneralizedNewtypeDeriving
                      , ImportQualifiedPost
                      , InstanceSigs
                      , ScopedTypeVariables
                      , StandaloneKindSignatures
                      , TypeApplications

  if flag(systemd) && os(linux)
    cpp-options:        -DSYSTEMD

  if flag(rtview)
    CPP-Options:        -DRTVIEW=1

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unticked-promoted-constructors
                        -Wno-orphans
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:               project-config


  hs-source-dirs:       src

  if flag(rtview)
    exposed-modules:    Cardano.Tracer.Handlers.RTView.Run
                        Cardano.Tracer.Handlers.RTView.Utils

                        Cardano.Tracer.Handlers.RTView.State.Displayed
                        Cardano.Tracer.Handlers.RTView.State.EraSettings
                        Cardano.Tracer.Handlers.RTView.State.Historical
                        Cardano.Tracer.Handlers.RTView.State.Last
                        Cardano.Tracer.Handlers.RTView.State.Peers

                        Cardano.Tracer.Handlers.RTView.UI.CSS.Bulma
                        Cardano.Tracer.Handlers.RTView.UI.CSS.Own
                        Cardano.Tracer.Handlers.RTView.UI.HTML.Node.Column
                        Cardano.Tracer.Handlers.RTView.UI.HTML.Node.EKG
                        Cardano.Tracer.Handlers.RTView.UI.HTML.Node.Peers
                        Cardano.Tracer.Handlers.RTView.UI.HTML.About
                        Cardano.Tracer.Handlers.RTView.UI.HTML.Body
                        Cardano.Tracer.Handlers.RTView.UI.HTML.Logs
                        Cardano.Tracer.Handlers.RTView.UI.HTML.Main
                        Cardano.Tracer.Handlers.RTView.UI.HTML.NoNodes
                        Cardano.Tracer.Handlers.RTView.UI.HTML.Notifications
                        Cardano.Tracer.Handlers.RTView.UI.JS.ChartJS
                        Cardano.Tracer.Handlers.RTView.UI.JS.Charts
                        Cardano.Tracer.Handlers.RTView.UI.JS.Utils
                        Cardano.Tracer.Handlers.RTView.UI.Img.Icons
                        Cardano.Tracer.Handlers.RTView.UI.Charts
                        Cardano.Tracer.Handlers.RTView.UI.Logs
                        Cardano.Tracer.Handlers.RTView.UI.Notifications
                        Cardano.Tracer.Handlers.RTView.UI.Theme
                        Cardano.Tracer.Handlers.RTView.UI.Types
                        Cardano.Tracer.Handlers.RTView.UI.Utils

                        Cardano.Tracer.Handlers.RTView.Update.Chain
                        Cardano.Tracer.Handlers.RTView.Update.EKG
                        Cardano.Tracer.Handlers.RTView.Update.EraSettings
                        Cardano.Tracer.Handlers.RTView.Update.Historical
                        Cardano.Tracer.Handlers.RTView.Update.KES
                        Cardano.Tracer.Handlers.RTView.Update.Leadership
                        Cardano.Tracer.Handlers.RTView.Update.Logs
                        Cardano.Tracer.Handlers.RTView.Update.NodeInfo
                        Cardano.Tracer.Handlers.RTView.Update.NodeState
                        Cardano.Tracer.Handlers.RTView.Update.Nodes
                        Cardano.Tracer.Handlers.RTView.Update.Peers
                        Cardano.Tracer.Handlers.RTView.Update.Reload
                        Cardano.Tracer.Handlers.RTView.Update.Resources
                        Cardano.Tracer.Handlers.RTView.Update.Transactions

  exposed-modules:      Cardano.Tracer.Acceptors.Client
                        Cardano.Tracer.Acceptors.Run
                        Cardano.Tracer.Acceptors.Server
                        Cardano.Tracer.Acceptors.Utils

                        Cardano.Tracer.Handlers.Logs.File
                        Cardano.Tracer.Handlers.Logs.Journal
                        Cardano.Tracer.Handlers.Logs.Rotator
                        Cardano.Tracer.Handlers.Logs.TraceObjects
                        Cardano.Tracer.Handlers.Logs.Utils

                        Cardano.Tracer.Handlers.Metrics.Monitoring
                        Cardano.Tracer.Handlers.Metrics.Prometheus
                        Cardano.Tracer.Handlers.Metrics.Servers
                        Cardano.Tracer.Handlers.Metrics.Utils

                        Cardano.Tracer.Handlers.Notifications.Check
                        Cardano.Tracer.Handlers.Notifications.Email
                        Cardano.Tracer.Handlers.Notifications.Send
                        Cardano.Tracer.Handlers.Notifications.Settings
                        Cardano.Tracer.Handlers.Notifications.Timer
                        Cardano.Tracer.Handlers.Notifications.Types
                        Cardano.Tracer.Handlers.Notifications.Utils

                        Cardano.Tracer.Handlers.ReForwarder
                        Cardano.Tracer.Handlers.SSL.Certs
                        Cardano.Tracer.Handlers.State.TraceObjects
                        Cardano.Tracer.Handlers.System
                        Cardano.Tracer.Handlers.Utils

                        Cardano.Tracer.CLI
                        Cardano.Tracer.Configuration
                        Cardano.Tracer.Environment
                        Cardano.Tracer.MetaTrace
                        Cardano.Tracer.Run
                        Cardano.Tracer.Types
                        Cardano.Tracer.Utils

  other-modules:        Paths_cardano_tracer
  autogen-modules:      Paths_cardano_tracer

  if flag(rtview)
    build-depends:
                        cardano-git-rev ^>=0.2.2
                      , cassava
                      , threepenny-gui
                      , utf8-string
                      , vector

  if flag(systemd) && os(linux)
    build-depends:      libsystemd-journal >= 1.4.4

  if (flag(systemd) && os(linux)) || flag(rtview)
    build-depends:      unordered-containers

  build-depends:        aeson >= 2.1.0.0
                      , async
                      , auto-update
                      , bimap
                      , blaze-html
                      , bytestring
                      , cborg ^>= 0.2.4
                      , containers
                      , contra-tracer
                      , directory
                      , ekg-core
                      , ekg-forward >= 0.9
                      , ekg-wai
                      , extra
                      , filepath
                      , http-types
                      , mime-mail
                      , network-mux >= 0.5
                      , optparse-applicative
                      , ouroboros-network ^>= 0.20
                      , ouroboros-network-api ^>= 0.13
                      , ouroboros-network-framework
                      , signal
                      , slugify
                      , smtp-mail ^>= 0.5
                      , stm <2.5.2 || >=2.5.3
                      , string-qq
                      , text
                      , time
                      , trace-dispatcher ^>= 2.8.1
                      , trace-forward ^>= 2.2.10
                      , trace-resources ^>= 0.2.3
                      , unordered-containers
                      , wai ^>= 3.2
                      , warp ^>= 3.4
                      , yaml

  if os(windows)
    build-depends:    Win32
  else
    build-depends:    unix

executable cardano-tracer
  import:               project-config

  hs-source-dirs:       app

  main-is:              cardano-tracer.hs

  other-modules:        Paths_cardano_tracer
  autogen-modules:      Paths_cardano_tracer

  default-extensions:   BlockArguments
                      , ScopedTypeVariables

  build-depends:        cardano-tracer
                      , optparse-applicative

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-T

library demo-forwarder-lib
  import:               project-config

  hs-source-dirs:       test

  other-modules:        Cardano.Tracer.Test.Utils

  exposed-modules:      Cardano.Tracer.Test.Forwarder
                        Cardano.Tracer.Test.TestSetup

  build-depends:        aeson
                      , async
                      , bytestring
                      , cardano-tracer
                      , cborg
                      , contra-tracer
                      , deepseq
                      , directory
                      , ekg-core
                      , ekg-forward
                      , extra
                      , filepath
                      , generic-data
                      , network-mux
                      , optparse-applicative-fork >= 0.18.1
                      , ouroboros-network-api ^>= 0.12
                      , ouroboros-network-framework
                      , tasty-quickcheck
                      , time
                      , trace-dispatcher ^>= 2.8.1
                      , trace-forward ^>= 2.2.10
                      , vector
                      , vector-algorithms
                      , QuickCheck


executable demo-forwarder
  import:               project-config

  hs-source-dirs:       demo/ssh

  main-is:              forwarder.hs

  build-depends:        demo-forwarder-lib

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-T
  if os(windows)
    buildable:          False

library demo-acceptor-lib
  import:               project-config

  hs-source-dirs:       test

  other-modules:        Cardano.Tracer.Test.TestSetup
                        Cardano.Tracer.Test.Utils

  exposed-modules:      Cardano.Tracer.Test.Acceptor

  build-depends:        bytestring
                      , cardano-tracer
                      , containers
                      , extra
                      , filepath
                      , generic-data
                      , optparse-applicative-fork >= 0.18.1
                      , ouroboros-network-api ^>= 0.12
                      , stm <2.5.2 || >=2.5.3
                      , text
                      , tasty-quickcheck
                      , trace-forward ^>= 2.2.10
                      , vector
                      , vector-algorithms
                      , QuickCheck

executable demo-acceptor
  import:               project-config

  hs-source-dirs:       demo

  main-is:              acceptor.hs

  build-depends:        demo-acceptor-lib

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-T
  if os(windows)
    buildable:          False

test-suite cardano-tracer-test
  import:               project-config
  type:                 exitcode-stdio-1.0
  default-extensions:   OverloadedStrings

  if os(windows)
    buildable:          False

  hs-source-dirs:       test

  main-is:              cardano-tracer-test.hs

  other-modules:        Cardano.Tracer.Test.Forwarder
                        Cardano.Tracer.Test.DataPoint.Tests
                        Cardano.Tracer.Test.Logs.Tests
                        Cardano.Tracer.Test.Restart.Tests
                        Cardano.Tracer.Test.TestSetup
                        Cardano.Tracer.Test.Utils
                        Cardano.Tracer.Test.Queue.Tests
  build-depends:        aeson
                      , async
                      , bytestring
                      , cardano-tracer
                      , cborg
                      , containers
                      , contra-tracer
                      , deepseq
                      , directory
                      , ekg-core
                      , ekg-forward
                      , extra
                      , filepath
                      , generic-data
                      , network-mux
                      , optparse-applicative-fork >= 0.18.1
                      , ouroboros-network-api ^>= 0.12
                      , ouroboros-network-framework
                      , stm <2.5.2 || >=2.5.3
                      , tasty
                      , tasty-quickcheck
                      , text
                      , time
                      , trace-dispatcher ^>= 2.8.1
                      , trace-forward ^>= 2.2.10
                      , unix-compat
                      , vector
                      , vector-algorithms
                      , QuickCheck

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

test-suite cardano-tracer-test-ext
  import:               project-config
  type:                 exitcode-stdio-1.0
  default-extensions:   OverloadedStrings

  hs-source-dirs:       test

  main-is:              cardano-tracer-test-ext.hs

  other-modules:        Cardano.Tracer.Test.Forwarder
                        Cardano.Tracer.Test.TestSetup
                        Cardano.Tracer.Test.Utils
                        Cardano.Tracer.Test.ForwardingStressTest.Script
                        Cardano.Tracer.Test.ForwardingStressTest.Config
                        Cardano.Tracer.Test.ForwardingStressTest.Messages
                        Cardano.Tracer.Test.ForwardingStressTest.Types

  build-tool-depends:   cardano-tracer:cardano-tracer

  -- Sadly, this does not work on Windows (Path vs. PATH?):
  -- *** Failed! Exception: 'cardano-tracer: spawnProcess: failed (Success)' (after 1 test):
  if os(windows)
    buildable:          False

  build-depends:        aeson
                      , async
                      , bytestring
                      , cardano-tracer
                      , cborg
                      , containers
                      , contra-tracer
                      , deepseq
                      , directory
                      , ekg-core
                      , ekg-forward
                      , extra
                      , filepath
                      , generic-data
                      , Glob
                      , network-mux
                      , optparse-applicative-fork >= 0.18.1
                      , ouroboros-network ^>= 0.19.0.3
                      , ouroboros-network-api ^>= 0.12
                      , ouroboros-network-framework
                      , process
                      , QuickCheck
                      , tasty
                      , tasty-quickcheck
                      , text
                      , time
                      , trace-dispatcher ^>= 2.8.1
                      , trace-forward ^>= 2.2.10
                      , unix-compat
                      , vector
                      , vector-algorithms

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N

benchmark cardano-tracer-bench
  import:               project-config
  type:                 exitcode-stdio-1.0

  hs-source-dirs:       bench

  main-is:              cardano-tracer-bench.hs

  if flag(rtview)
    build-depends:      stm <2.5.2 || >=2.5.3
  build-depends:        cardano-tracer
                      , criterion
                      , directory
                      , deepseq
                      , extra
                      , filepath
                      , time
                      , trace-dispatcher ^>= 2.8.1

  ghc-options:          -threaded
                        -rtsopts
                        -with-rtsopts=-N
